# pyVBAanalysis

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  agent.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: AI-Smells-Agents-Avoid.md  api-reference.md  diagnostics-catalogue.md  usage.md
pyvbaanalysis/: __init__.py  __main__.py  cli.py  evidence.py  project.py
pyvbaanalysis/call/: __init__.py  call_context.py
pyvbaanalysis/completion/: __init__.py  cursor_context.py  event_handlers.py  member_access.py  type_completion.py
pyvbaanalysis/conditional/: __init__.py  conditional_compilation.py
pyvbaanalysis/constants/: __init__.py  integer_constant_expression.py
pyvbaanalysis/data/: diagnostic_influence_audit.json  event_definitions.json  excel_host_model.json  manifest.json  rule_metadata.json  vba_runtime_tables.json  vbe_oracle_cases.json
pyvbaanalysis/diagnostics/: __init__.py  analyze_module.py  argument_inference.py  call_extraction.py  callable_signatures.py  const_expr.py  context.py  dataflow.py  exprwalk.py  inline_suppression.py  model.py  registry.py  rule_metadata.py  walker.py
pyvbaanalysis/diagnostics/rules/: __init__.py  argument_shape.py  argument_types.py  arrays.py  assignments.py  binary_operand_scalar.py  call_arity.py  control_flow.py  declarations.py  duplicates.py  expressions.py  lexical.py  module_kind.py  numeric_literals.py  object_state.py  parameter_defaults.py  runtime_values.py  shared.py  type_of_is.py  undeclared.py
pyvbaanalysis/flow/: __init__.py  procedure_labels.py  procedure_unstructured.py
pyvbaanalysis/host/: __init__.py  host_model.py
pyvbaanalysis/lexer/: __init__.py  keyword_table.py  stripped_lines.py  token_helpers.py  token_kinds.py  tokenize.py  trivia.py
pyvbaanalysis/parser/: __init__.py  fixed_length_string.py  nodes.py  parse_expression.py  parse_module.py  parser_state.py  type_declaration_suffix.py
pyvbaanalysis/reader/: __init__.py  loose_file.py  vbe_module.py  workbook.py
pyvbaanalysis/runtime/: __init__.py  vba_runtime.py
pyvbaanalysis/symbols/: __init__.py  build_module_symbols.py  name_resolution.py  project_index.py  symbol_model.py
pyvbaanalysis/types/: __init__.py  type_inference.py  type_names.py
tests/: conftest.py  oracle_support.py  test_cli.py  test_conditional_compilation.py  test_dataflow.py  test_diagnostics_engine.py  test_evidence.py  test_host_model.py  test_inline_suppression.py  test_integer_constant_expression.py  test_lexer.py  test_parser.py  test_project.py  test_project_index.py  test_public_api.py  test_reader.py  test_rule_metadata.py  test_rules_ambiguous_enum_member.py  test_rules_argument_shape.py  test_rules_argument_types.py  test_rules_arrays.py  test_rules_assignments.py  test_rules_assignments_types.py  test_rules_binary_operand_scalar.py  test_rules_call_arity.py  test_rules_control_flow.py  test_rules_declarations.py  test_rules_division_by_zero.py  test_rules_duplicates.py  test_rules_event_handler_module_scope.py  test_rules_expression_calls.py  test_rules_expressions.py  test_rules_invalid_as_type_names.py  test_rules_is_operator_non_object.py  test_rules_lexical.py  test_rules_member_not_found.py  test_rules_module_kind.py  test_rules_numeric_literals.py  test_rules_object_state.py  test_rules_parameter_defaults.py  (+12 more)
tools/: extract_event_definitions.mjs  extract_host_model.mjs  extract_runtime_tables.mjs  generate_diagnostics_catalogue.py
