[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvbaanalysis"
version = "0.9.0"
description = "Pure-Python static analysis for VBA, ported from the XLIDE analyzer"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vba", "static-analysis", "linter", "excel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyOpenVBA>=3.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/WilliamSmithEdward/pyVBAanalysis"

[tool.hatch.build.targets.wheel]
packages = ["pyvbaanalysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
