[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvbaanalysis"
version = "0.9.0"
description = "Pure-Python static analysis for VBA, ported from the XLIDE analyzer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "William Smith Edward" }]
keywords = ["vba", "static-analysis", "linter", "excel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = ["pyOpenVBA>=3.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]
build = ["build>=1.2", "twine>=5"]

[project.urls]
Homepage = "https://github.com/WilliamSmithEdward/pyVBAanalysis"
Repository = "https://github.com/WilliamSmithEdward/pyVBAanalysis"
Issues = "https://github.com/WilliamSmithEdward/pyVBAanalysis/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyvbaanalysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
